--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ header {
 }
 
 .custom-shape-divider-bottom-1742542274 .shape-fill {
-  fill: #140000;
+  fill: #000000;
 }
 
 .main_logo {
@@ -119,7 +119,7 @@ header {
 }
 
 nav {
-  background-color: #140000;
+  background-color: #000000;
   text-align: center;
   display: flex;
   justify-content: space-between;
@@ -187,7 +187,7 @@ a.btn {
 
 a.btn:hover {
   background-color: #ffae00;
-  color: #140000;
+  color: #000000;
   scale: 1.1;
 }
 
@@ -199,7 +199,7 @@ a.btn:hover {
 
 .footer {
     padding: 50px;
-    background-color: #140000;
+    background-color: #000000;
     /* background: linear-gradient(#2c0000, #411a03); */
     color: #FFFFFF;
     text-align: center; 
@@ -244,6 +244,11 @@ a.btn:hover {
   scale: 1.1;
 }
 
+.eventmap {
+  padding: 20px 40px;
+  background-image: url("purple\ type\ 1.png");
+}
+
 
 .half {
   padding: 20px;
@@ -261,7 +266,7 @@ a.btn:hover {
 
 .homestore {
   padding: 50px 0px;
-  background-color: #140000;
+  background-color: #000000;
 }
 
 .grid {
